# geometry-t1m3ctrl

./: .gitignore  CMakeLists.txt  README.md  geometry.txt  main.c  makefile
.github/workflows/: build.yml
include/: errors.h  geometry.h
res/: geometry.txt
src/: errors.c  geometry.c  main.c
test/: test.c
